should be about ready for release

--- a/common/src/main/resources/assets/hexiron/lang/en_us.json
+++ b/common/src/main/resources/assets/hexiron/lang/en_us.json
@@ -1,13 +1,14 @@
 {
-  "item.hexiron.dummy_item": "Dummy Item",
-  "hexcasting.spell.hexiron:congrats": "Congrats",
-  "hexcasting.spell.hexiron:signum": "Signum Purification",
-  "hexcasting.spell.book.hexiron:congrats": "Dum. Spell Actn.",
-  "hexcasting.spell.book.hexiron:signum": "Dum. Actn.",
-  "hexiron.entry.dummy_spells": "Dummy Spells",
-  "hexiron.entry.dummy_actions": "Dummy Actions",
-  "hexiron.page.dummy_spells.congrats": "Accepts a player entity, tells them they are doing a good job and makes them look up.",
-  "hexiron.page.dummy_actions.signum": "Accepts a $(l:casting/101)number/$, returns -1 if it is negative, 0 if 0, 1 if positive.",
-  "text.hexiron.congrats": "Good job, %1$s!",
-  "text.hexiron.congrats.player": "a Player"
+  "hexcasting.spell.hexiron:angelwings": "White Sun's Meridian",
+  "hexcasting.spell.hexiron:planarsight": "Red Sun's Meridian",
+  "hexcasting.spell.hexiron:oakskin": "Green Sun's Meridian",
+  "hexcasting.spell.hexiron:trueinvis": "Black Sun's Meridian",
+  "hexcasting.spell.hexiron:charged": "Blue Sun's Meridian",
+  "hexiron.entry.ironspells": "Iron's Spells 'n Spellbooks",
+  "hexiron.pages.ironspells.1": "It seems that myriad forms of magic exist in the multiverse, you just need to know where to look. The spells documented here interact with one such magic system, functioning similarly to the familiar $(l:patterns/great_spells/zeniths)Zeniths$(/l).",
+  "hexiron.pages.ironspells.2": "Accepts a living entity and a number, and bestows Angel Wings upon it, allowing it to glide similar to an elytra. Costs 1 amethyst dust per 2 seconds.",
+  "hexiron.pages.ironspells.3": "Accepts a living entity and a number, and Charges it with arcane lightning, enhancing its abilities. Costs 1 amethyst dust per second.",
+  "hexiron.pages.ironspells.4": "Accepts a living entity and a number, and renders it Truly Invisible, causing even its equipment to vanish. Costs 1 amethyst dust per second.",
+  "hexiron.pages.ironspells.5": "Accepts a living entity and a number, and grants it Planar Sight, allowing it to perceive entities through barriers. Costs 2 amethyst dust per second.",
+  "hexiron.pages.ironspells.6": "Accepts a living entity and two numbers (duration, potency), and imbues it with Oakskin, reducing damage taken. Costs a base of 1 amethyst dust per second, scaling with the cube of potency."
 }
